Changes in quota-tools from 3.11 to 3.12
* added batch mode to the setquota(8) (Jan Kara)
* added reference to setquota(8) to manpages of other tools (Jan Kara)
* fixed bug in --port option of rquotad (Max Kalika)
* updated quota documentation (Jan Kara)
* disabling nls via configure (Jan Kara)
* fixed warning when gettext not used (Peter Breitenlohner)
* fixed typo in rquotad.8 (Peter Breitenlohner)
* fixed compiler warning in quotacheck.c (Peter Breitenlohner)
* added config option for putting some important binaries to /sbin regardless
  $(prefix) (Jan Kara)
* added config option to warnquota(8) for CCing admin only specified amount of
  time before grace time runs out (Jan Kara)

Changes in quota-tools from 3.10 to 3.11
* quota-tools should again use old RPC protocol when needed (Jan Kara)
* add FIOQSIZE for x84_64 architecture (Jan Kara)
* quotacheck(8) does not count quota files to usage (Jan Kara)
* tools now honor journalled quota mount options (Jan Kara)
* manpage of repquota(8) stated falsely that repquota works over RPC (Jan Kara)
* added -T flag to quot(8) to avoid truncation of names (Andre Nathan)
* added -q flag to quot(8) to avoid sorting of names (Andre Nathan)
* added #include <paths.h> in quotasys.c to avoid compile problems on some systems (Jan Kara)
* changed detection of filesystem to be able to parse comma separated list (Jan Kara)
* fixed bug in quotacheck(8) which counted wrongly files larger than 2GB (Posta Zoltan)
* fixed compile problem with quotacheck and new kernels (Michael Meskes, Jan Kara)
* fixed typo in quotacheck manpage (Noel Koethe)
* warnquota(8) can get mail addresses via LDAP (James Bourne)
* warnquota(8) can avoid sending e-mail when user is over quota on mail partition (James Bourne)
* fixed bug in quotacheck(8) which counted directories twice sometimes (Jan Kara)
* edquota(8) now allows parameters in VISUAL/EDITOR env. params (Jan Kara)